--- a/index.html
+++ b/index.html
@@ -14,20 +14,17 @@
 </head>
   <body style="background-color: #2b2b2b">
     <div class="row" style="margin-top: 0.5em;">
-      <h3 style="margin-left:10px; color:white;">Future Housing Development</h3>
+      <h4 style="margin-left:10px; color:#ababab;">Highlight of the Vision: </h4>
       <p style="margin-left:10px; color:white;">Transforming rural bare lands into vibrant livable communities with diverse housing.</p>
       <div class="large-12 columns">
         <div class="twentytwenty-container">
           <img width="100%" src="img/complete_nbhd_exst_clip.jpg" />
           <img width="100%" src="img/01_Building complete neighborhoods_IMAGE CREDIT_ Designed by SITELAB urban studio_CMG.jpg" />
         </div>
+        <input class="VRbutton"  type="button" value="Explore the VR Scene" 
+        onclick="window.open('https://3dstreet.app/#/scenes/943f35e8-8064-4fb8-9588-80fe44cb76e2.json','_blank')" 
+        />
       </div>
-      <!-- <div class="large-6 columns" style="position: relative; width: 50%;"> 
-        <p style="font-family: Arial; font-weight:100;">Typical scene of existing undeveloped land.</p>
-      </div>
-      <div class="large-6 columns" style="position: relative; width: 50%;">
-        <p style="font-family: Arial; font-weight:100;">Potential complete neighborhood with a diverse mix of different housing typologies and building styles. </p>
-      </div> -->
     </div>
 
     <script
